--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.2",
-    "typescript": "3.6.3",
     "url-loader": "2.1.0",
     "webpack": "4.39.1",
     "webpack-dev-server": "3.2.1",
@@ -146,6 +145,8 @@
     "@babel/core": "^7.5.5",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/react": "^5.3.19",
-    "babel-loader": "^8.0.6"
+    "babel-loader": "^8.0.6",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.6.3"
   }
 }
