--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "@storybook/addon-viewport": "^5.3.19",
     "@storybook/react": "^5.3.19",
     "babel-loader": "^8.0.6",
+    "storybook-addon-themes": "^5.4.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.6.3"
   }
